--- a/index.html
+++ b/index.html
@@ -3,9 +3,10 @@
 
 <head>
   <meta charset="UTF-8" />
-  <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+  <link rel="icon" type="image/x-icon"
+    href="https://res.cloudinary.com/dgmrbxuvb/image/upload/v1771061578/mb_yjwacv.ico" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>MB Prime | Luxury Villa Plots in Srikakulam | Grandeur & Peace</title>
+  <title>Prime Projects | We Create Landmarks</title>
   <meta name="description"
     content="MB Prime offers premium luxury villa plots in Srikakulam. Experience grandeur, peace, and 100% Vastu compliance." />
   <meta name="keywords"
@@ -13,7 +14,9 @@
 
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond:ital,wght@0,300;0,400;0,500;0,600;0,700;1,400;1,500&family=Inter:wght@200;300;400;500;600;700;800&display=swap" rel="stylesheet">
+  <link
+    href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond:ital,wght@0,300;0,400;0,500;0,600;0,700;1,400;1,500&family=Inter:wght@200;300;400;500;600;700;800&display=swap"
+    rel="stylesheet">
 </head>
 
 <body>
